# flask-chat-app

./: .breakpoints  Procfile  cache.db  main.py  pyproject.toml  requirements.txt
static/: app.css  app.jsx
templates/: base.html  index.html
