[tool.poetry]
name = "repl_python3_KnowingHonorableLanguage"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
beautifulsoup4 = "^4.10.0"
replit = "^3.2.4"
react = "^4.3.0"
Flask-Babel = "^2.0.0"
Flask-Cors = "^3.0.10"
better-profanity = "^0.7.0"
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
